# CompactStar

./: .clang-format  .gitignore  CMakeLists.txt  CompactStar.code-workspace  CompactStarConfig.h.in  License.txt  README.md
CompactStar/: CMakeLists.txt
CompactStar/BNV/: BNV_Analysis.hpp  BNV_B_Chi_Combo.hpp  BNV_B_Chi_Photon.hpp  BNV_B_Chi_Transition.hpp  BNV_B_Psi_Pion.hpp  BNV_Chi.hpp  BNV_Sequence.hpp  CMakeLists.txt  Decay_Analysis.hpp
CompactStar/BNV/src/: BNV_Analysis.cpp  BNV_B_Chi_Combo.cpp  BNV_B_Chi_Photon.cpp  BNV_B_Chi_Transition.cpp  BNV_B_Psi_Pion.cpp  BNV_Chi.cpp  BNV_Sequence.cpp  Decay_Analysis.cpp
CompactStar/BNV/src/tmp/: BNV_B_Chi_Photon_old.cpp  BNV_B_Chi_Photon_wrong.cpp
CompactStar/ChemicalHeating/: CMakeLists.txt  SigmaOmegaRho_npemu.hpp
CompactStar/ChemicalHeating/src/: SigmaOmegaRho_npemu.cpp
CompactStar/Core/: Analysis.hpp  CMakeLists.txt  CompactStarConfig 2.h  CompactStarConfig.h  MixedStar.hpp  NStar.hpp  Prog.hpp  Pulsar.hpp  RotationSolver.hpp  TOVSolver.hpp  TOVSolver_Thread.hpp  TaskManager.hpp
CompactStar/Core/src/: Analysis.cpp  MixedStar.cpp  NStar.cpp  Prog.cpp  Pulsar.cpp  RotationSolver.cpp  TOVSolver.cpp  TOVSolver_Old.cpp  TOVSolver_Thread.cpp  TaskManager.cpp
CompactStar/EOS/: Baryon.hpp  CMakeLists.txt  Common.hpp  CompOSE_EOS.hpp  CoulombLattice.hpp  Fermi_Gas.hpp  Fermi_Gas_Many.hpp  Lepton.hpp  Model.hpp  Particle.hpp  Polytrope.hpp  SigmaOmega.hpp  SigmaOmegaPar.hpp  SigmaOmegaRho.hpp  SigmaOmegaRho_nstar.hpp
CompactStar/EOS/src/: Baryon.cpp  Common.cpp  CompOSE_EOS.cpp  CoulombLattice.cpp  Fermi_Gas.cpp  Fermi_Gas_Many.cpp  Lepton.cpp  Model.cpp  Particle.cpp  Polytrope.cpp  SigmaOmega.cpp  SigmaOmegaPar.cpp  SigmaOmegaRho.cpp  SigmaOmegaRho_nstar.cpp
CompactStar/LightDM/: CMakeLists.txt  LightDM_Scalar_Density.hpp
CompactStar/LightDM/src/: LightDM_Scalar_Density.cpp
CompactStar/MixedStar/: CMakeLists.txt  DarkCore_Analysis.hpp
CompactStar/MixedStar/src/: DarkCore_Analysis.cpp
dependencies/include/: matplotlibcpp.hpp
dependencies/include/Confind/: Common.hpp  ConfindConfig.h  Cont2D 2.hpp  ContourFinder 2.hpp
dependencies/include/Zaki/File/: CSVIterator.hpp  CSVRow.hpp  VecSaver.hpp
dependencies/include/Zaki/Math/: Func2D.hpp  GSLFuncWrapper.hpp  GSLMultiFWrapper.hpp  GSLMultiFdfWrapper.hpp  GSLfdfWrapper.hpp  IntegralTable.hpp  Math_Core.hpp  MemFuncWrapper.hpp  NDimContLevel.hpp  Newton.hpp
dependencies/include/Zaki/Physics/: Constants.hpp  Coordinate.hpp  DateTime.hpp  Sun.hpp
dependencies/include/Zaki/String/: Banner.hpp  Directory.hpp  String_Basic.hpp  TextBox.hpp
dependencies/include/Zaki/Util/: Instrumentor.hpp  Logger.hpp  MemoryManager.hpp  ObjObserver.hpp  Profile_Timer.hpp  Simple_Timer.hpp
dependencies/include/Zaki/Vector/: DataSet.hpp  Vector_Basic.hpp
main/: CMakeLists.txt
main/Examples/: CMakeLists.txt  Fermi_gas_many.cpp  Table_5-8_Glenn.cpp  baryons.cpp  coulatt.cpp  polytrope.cpp  rotating_ns.cpp  sig_omega.cpp  sig_omega_rho.cpp  sig_omega_rho_nstar.cpp
